<resources>
    <string name="app_name">ProyectoFinal</string>
    <string name="valbtn_ingresar">Ingresar</string>
    <string name="valbtn_registrarse">Registrarse</string>
    <string name="valtitulo_registra">Registrarse</string>
    <string name="val_correo">Correo Electrónico</string>
    <string name="val_contraseña">Contraseña</string>
    <string name="valbtn_registrar">Registrar</string>
    <string name="msjeyatienes">¿Ya tienes una cuenta?</string>
    <string name="link_ingresa">Ingresa</string>
    <string name="titulo_principal">Encuentra tu comida favorita</string>
    <string name="quepodemosofrecer">¿Qué podemos ofrecerte?</string>
    <string name="val_nombre">Nombres</string>
    <string name="val_apellidos">Apellidos</string>
    <string name="val_anionacimiento">Año nacimiento</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_principal_scrolling">PrincipalScrollingActivity</string>
    <string name="Ordenahora">Ordena ahora</string>
    <string name="action_settings">Settings</string>
    <string name="felicidades">Felicidades</string>
    <string name="haactivado">Ha activado creado correctamente su perfil</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_principal">Ordenar</string>
    <string name="menu_metodo">Método de pago</string>
    <string name="menu_seguimiento">Seguimiento de pedido</string>
    <string name="menu_calificacion">Calificación y comentarios</string>
    <string name="menu_soporte">Soporte al Cliente</string>
</resources>